fix: ui-burger overflow hidden

--- a/css/base.css
+++ b/css/base.css
@@ -12,6 +12,7 @@
 .container--header {
   position: fixed;
   top: 20px;
+  overflow: visible;
 }
 
 .lorem {
