--- a/css/header.css
+++ b/css/header.css
@@ -51,7 +51,6 @@ header {
 
 .header-checked {
   transition: 0.3s all;
-
   cursor: pointer;
 }
 
@@ -65,11 +64,15 @@ header {
   border-radius: 50px;
   padding: 20px 40px;
   transition: 0.5s all;
+  text-align: center;
+  min-width: 100%;
 }
 
 .header-checked input:checked+.header-checked__button {
   border: 1px solid var(--color-main);
   background-color: var(--color-main);
+
+
 }
 
 .header-checked:hover {
