--- a/css/ui.css
+++ b/css/ui.css
@@ -15,7 +15,6 @@
 .ui-burger__box {
   display: flex;
   flex-direction: column;
-  align-items: center;
   position: absolute;
   background-color: var(--color-black);
   border-radius: 0 0 25px 25px;
